qqmljsimportvisitor: Fix relative paths being broken with resources

qrc cannot handle ".." in paths, so we need to clean our paths in order
to make relative directory imports work.

Fixes: QTBUG-103903
Change-Id: I31386728a7a20c30bd8c087dd3a1f2affc369cf4
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>