tests/auto/qml/qmllint/data/relPathQrc/Foo/Thing.qml
@@ -1,0 +1,3 @@
+import "../Bar" as Bar
+
+Bar.Thing2 {}
